--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# Additionnal files/folders to ignore from me:
+credentials.py
+data/
+.DS_Store
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
